Implement user/database agent logic (#27)
