# mysql-operator/pkg/client-agent/model_grant.go
@@ -1,0 +1,16 @@
+/*
+ * blaqkube MySQL agent
+ *
+ * Agent used by [blaqkube MySQL operator](http://github.com/blaqkube/mysql-operator) to manage MySQL backup/restore 
+ *
+ * API version: 0.0.1
+ * Contact: contact@blaqkube.io
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package openapi
+// Grant struct for Grant
+type Grant struct {
+	Database string `json:"database"`
+	AccessMode string `json:"accessMode,omitempty"`
+}
